// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadMore component tests with isLoading false simulate loading state in button 1`] = `
<div>
  <ul
    aria-label="Simple data list example"
    class="pf-c-data-list pf-m-grid-md"
    data-ouia-component-id="load-more-ouia-id"
    data-ouia-component-type="load-more"
    data-ouia-safe="true"
    data-testid="load-more-data-list"
  >
    <li
      aria-labelledby="kie-datalist-item"
      class="pf-c-data-list__item"
      id=""
    >
      <div
        class="pf-c-data-list__cell kogito-components-common__load-more"
        rowid="kie-datalist-item"
      >
        <div
          class="pf-u-float-right pf-u-mr-md"
        >
          <div
            class="pf-c-dropdown pf-m-top"
            data-ouia-component-id="OUIA-Generated-Dropdown-4"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <div
              class="pf-c-dropdown__toggle pf-m-split-button"
            >
              <button
                class="pf-c-dropdown__toggle-button"
                data-testid="toggle-action"
              >
                Loading...
                <span
                  aria-label="Contents"
                  aria-valuetext="Loading..."
                  class="pf-c-spinner pf-m-md kogito-components-common__load-more-spinner"
                  role="progressbar"
                >
                  <span
                    class="pf-c-spinner__clipper"
                  />
                  <span
                    class="pf-c-spinner__lead-ball"
                  />
                  <span
                    class="pf-c-spinner__tail-ball"
                  />
                </span>
                 
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Select"
                class="pf-c-dropdown__toggle-button"
                data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
                data-ouia-component-type="PF4/DropdownToggle"
                data-ouia-safe="true"
                data-testid="toggle-id"
                id="pf-dropdown-toggle-id-7"
                type="button"
              >
                <span
                  class=""
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`LoadMore component tests with isLoading false snapshot testing 1`] = `
<ul
  aria-label="Simple data list example"
  class="pf-c-data-list pf-m-grid-md"
  data-ouia-component-id="load-more-ouia-id"
  data-ouia-component-type="load-more"
  data-ouia-safe="true"
  data-testid="load-more-data-list"
>
  <li
    aria-labelledby="kie-datalist-item"
    class="pf-c-data-list__item"
    id=""
  >
    <div
      class="pf-c-data-list__cell kogito-components-common__load-more"
      rowid="kie-datalist-item"
    >
      <div
        class="pf-u-float-right pf-u-mr-md"
      >
        <div
          class="pf-c-dropdown pf-m-top"
          data-ouia-component-id="OUIA-Generated-Dropdown-1"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
        >
          <div
            class="pf-c-dropdown__toggle pf-m-split-button"
          >
            <button
              class="pf-c-dropdown__toggle-button"
              data-testid="toggle-action"
            >
              Load 10 more
            </button>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Select"
              class="pf-c-dropdown__toggle-button"
              data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
              data-ouia-component-type="PF4/DropdownToggle"
              data-ouia-safe="true"
              data-testid="toggle-id"
              id="pf-dropdown-toggle-id-0"
              type="button"
            >
              <span
                class=""
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
